[gd_scene load_steps=42 format=3 uid="uid://cf5heufemalnf"]

[ext_resource type="Script" path="res://menu_scenes/Menu.gd" id="1_auyj4"]
[ext_resource type="PackedScene" uid="uid://cqq3thsbsvhon" path="res://menu_scenes/account_tab_scenes/accounts_tab.tscn" id="2_bowrm"]
[ext_resource type="Texture2D" uid="uid://be1w2o8rpowvr" path="res://Assets/Level/blackBackgroundLabel.png" id="15_eunkj"]
[ext_resource type="Texture2D" uid="uid://bdokt0vfvhq7a" path="res://Assets/UI/Phase_banner.png" id="16_up1d7"]
[ext_resource type="Texture2D" uid="uid://mcp75oajf5ah" path="res://Assets/UI/unmuted.png" id="20_bc6d1"]
[ext_resource type="PackedScene" uid="uid://d3553ynahp4sx" path="res://Game/Minimap.tscn" id="21_yru8m"]
[ext_resource type="Texture2D" uid="uid://df4rcbllm14t2" path="res://Assets/UI/trasparent background/background.png" id="22_awnnt"]
[ext_resource type="Texture2D" uid="uid://5kqo8ucaa2vn" path="res://Assets/UI/description_banner.png" id="23_2ajkl"]
[ext_resource type="Texture2D" uid="uid://dsnlhpdq5t3dj" path="res://Assets/UI/battle_Label/battle_label_text.png" id="24_mlqts"]
[ext_resource type="Texture2D" uid="uid://b5juw7nysoct5" path="res://Assets/UI/battle_Label/battle_label_an1.png" id="25_v7dnr"]
[ext_resource type="Texture2D" uid="uid://bgc6114qj2vuh" path="res://Assets/UI/battle_Label/battle_label_an2.png" id="26_cotaj"]
[ext_resource type="Texture2D" uid="uid://bqa087tneq0a7" path="res://Assets/UI/battle_Label/battle_label_an3.png" id="27_br7jf"]
[ext_resource type="Texture2D" uid="uid://dsicxl0o306yr" path="res://Assets/UI/battle_Label/battle_label_an4.png" id="28_n0gx6"]
[ext_resource type="Texture2D" uid="uid://qfw0g51oqumx" path="res://Assets/UI/battle_Label/battle_label_an5.png" id="29_88wo6"]
[ext_resource type="Texture2D" uid="uid://cfcyhxn6i8d6h" path="res://Assets/UI/battle_Label/battle_label_an6.png" id="30_bd6dn"]
[ext_resource type="Texture2D" uid="uid://b4w47185m63yy" path="res://Assets/UI/battle_Label/battle_label_an7.png" id="31_vh6e8"]
[ext_resource type="PackedScene" uid="uid://dfv1yobm3u5hn" path="res://Cards/hand.tscn" id="32_lqsdn"]
[ext_resource type="Texture2D" uid="uid://d086qb5ga4503" path="res://Assets/UI/label_maxCards.png" id="33_4u8b8"]
[ext_resource type="Texture2D" uid="uid://ub8ali3ulal6" path="res://Assets/UI/label_redrawCards.png" id="35_mgely"]
[ext_resource type="Texture2D" uid="uid://bo4dwm0nf4d6s" path="res://Assets/UI/label_wave.png" id="36_7y6p3"]
[ext_resource type="Texture2D" uid="uid://b3ta8luqjh0bp" path="res://Assets/UI/health_xp_bar/health_bar_empty.png" id="37_hp0un"]
[ext_resource type="Texture2D" uid="uid://cxuffpdkcxjux" path="res://Assets/UI/health_xp_bar/health_bar_full.png" id="38_72lji"]
[ext_resource type="Texture2D" uid="uid://b0eq8xikgqdh" path="res://Assets/UI/health_xp_bar/exp_bar_empty.png" id="39_dfgb8"]
[ext_resource type="Texture2D" uid="uid://c702rymlsrfa8" path="res://Assets/UI/health_xp_bar/exp_bar_full.png" id="40_82klk"]
[ext_resource type="Texture2D" uid="uid://d37kpb1s0d2wl" path="res://Assets/UI/block_empty.png" id="41_rcs85"]
[ext_resource type="Texture2D" uid="uid://je1318xrtgye" path="res://Assets/UI/block_full.png" id="42_v3gxg"]
[ext_resource type="Texture2D" uid="uid://b3t81dvgsum81" path="res://Assets/UI/trasparent background/0B663119-D32F-4FA6-AC1E-3040989151F2.png" id="43_h4bua"]
[ext_resource type="Texture2D" uid="uid://bm7dn44wtxu7h" path="res://Assets/UI/trasparent background/51A96E2A-E987-4DD6-9C49-37027C877AC6.png" id="44_qxqga"]
[ext_resource type="Texture2D" uid="uid://58rwvcf783rt" path="res://Assets/UI/trasparent background/DB3FCCDF-C9DB-4949-A256-86B28C643560.png" id="45_qoykf"]
[ext_resource type="Texture2D" uid="uid://b5e48n27vv5n4" path="res://Assets/UI/trasparent background/F4D3C18B-4BE6-4A76-99CA-B95B70916A82.png" id="46_b1vea"]
[ext_resource type="Texture2D" uid="uid://chiaoogdxx4hw" path="res://Assets/UI/options_button.png" id="47_ll7at"]

[sub_resource type="Theme" id="Theme_io2m8"]

[sub_resource type="LabelSettings" id="LabelSettings_nendl"]
font_size = 32

[sub_resource type="AnimatedTexture" id="AnimatedTexture_u67pj"]
frames = 7
frame_0/texture = ExtResource("25_v7dnr")
frame_0/duration = 0.1
frame_1/texture = ExtResource("26_cotaj")
frame_1/duration = 0.1
frame_2/texture = ExtResource("27_br7jf")
frame_2/duration = 0.1
frame_3/texture = ExtResource("28_n0gx6")
frame_3/duration = 0.1
frame_4/texture = ExtResource("29_88wo6")
frame_4/duration = 0.1
frame_5/texture = ExtResource("30_bd6dn")
frame_5/duration = 0.1
frame_6/texture = ExtResource("31_vh6e8")
frame_6/duration = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_hp71f"]
font_size = 26

[sub_resource type="SpriteFrames" id="SpriteFrames_iq0j2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_h4bua")
}, {
"duration": 1.0,
"texture": ExtResource("44_qxqga")
}, {
"duration": 1.0,
"texture": ExtResource("45_qoykf")
}, {
"duration": 1.0,
"texture": ExtResource("46_b1vea")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_83itf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_h4bua")
}, {
"duration": 1.0,
"texture": ExtResource("44_qxqga")
}, {
"duration": 1.0,
"texture": ExtResource("45_qoykf")
}, {
"duration": 1.0,
"texture": ExtResource("46_b1vea")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_tx5p1"]
font_size = 31
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_txt5r"]
resource_name = "DeathScreen"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"createNewGame"
}]
}

[sub_resource type="Animation" id="Animation_byqvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyocb"]
_data = {
"DeathScreen": SubResource("Animation_txt5r"),
"RESET": SubResource("Animation_byqvo")
}

[node name="Menu" type="Node2D" node_paths=PackedStringArray("description")]
z_index = 51
position = Vector2(519.378, 9.99976)
script = ExtResource("1_auyj4")
description = NodePath("CanvasLayer/UI/Description")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(0.565, 0.565)
transform = Transform2D(0.565, 0, 0, 0.565, 0, 0)

[node name="MainMenu" type="Node2D" parent="CanvasLayer"]

[node name="AccountsTab" parent="CanvasLayer/MainMenu" instance=ExtResource("2_bowrm")]

[node name="SoundButton" type="Button" parent="CanvasLayer/MainMenu"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 1731.0
offset_top = 111.0
offset_right = 1861.0
offset_bottom = 182.0
theme = SubResource("Theme_io2m8")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MainMenu/SoundButton"]
position = Vector2(61.9203, 32.3628)
texture = ExtResource("20_bc6d1")

[node name="UI" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="SpeedButton" type="Button" parent="CanvasLayer/UI"]
offset_left = 1746.9
offset_top = 803.584
offset_right = 1831.9
offset_bottom = 894.584
text = "sped
"

[node name="SpeedButton2" type="Button" parent="CanvasLayer/UI"]
offset_left = 1865.27
offset_top = 803.54
offset_right = 1950.27
offset_bottom = 894.54
text = "snel
"

[node name="Minimap" parent="CanvasLayer/UI" instance=ExtResource("21_yru8m")]
offset_left = 120.0
offset_top = 160.0
offset_right = 220.0
offset_bottom = 210.0
scale = Vector2(0.15, 0.15)

[node name="Description" type="Label" parent="CanvasLayer/UI"]
z_index = 3
offset_left = 451.0
offset_top = 1074.0
offset_right = 1621.0
offset_bottom = 1138.0
text = "Buildphase"
label_settings = SubResource("LabelSettings_nendl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UI/Description"]
show_behind_parent = true
position = Vector2(618.911, 32.3142)
scale = Vector2(0.626556, 0.0370286)
texture = ExtResource("22_awnnt")

[node name="Descriptionbanner" type="Sprite2D" parent="CanvasLayer/UI"]
visible = false
position = Vector2(1040.71, 60)
scale = Vector2(1.43494, 1.43701)
texture = ExtResource("23_2ajkl")

[node name="StartBattlePhase" type="TextureButton" parent="CanvasLayer/UI"]
clip_contents = true
offset_left = 1720.35
offset_top = 925.664
offset_right = 2242.35
offset_bottom = 1287.66
scale = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("24_mlqts")
texture_disabled = SubResource("AnimatedTexture_u67pj")
stretch_mode = 0

[node name="Hand" parent="CanvasLayer/UI" instance=ExtResource("32_lqsdn")]
position = Vector2(141.593, 950)
scale = Vector2(1.2, 1.2)

[node name="maxcards" type="Label" parent="CanvasLayer/UI"]
offset_left = 99.115
offset_top = 955.752
offset_right = 188.115
offset_bottom = 1013.75
text = "5"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UI/maxcards"]
z_index = -1
position = Vector2(-3.53981, 8.84949)
scale = Vector2(0.343, 0.343)
texture = ExtResource("33_4u8b8")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/UI/maxcards"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = -4.0
offset_right = 127.0
offset_bottom = 36.0
text = "MaxCards"
scroll_active = false

[node name="redraws" type="Label" parent="CanvasLayer/UI"]
offset_left = 97.3451
offset_top = 1072.57
offset_right = 174.346
offset_bottom = 1121.57
text = "2"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UI/redraws"]
z_index = -1
position = Vector2(-3.5398, 10.6154)
scale = Vector2(0.343, 0.343)
texture = ExtResource("35_mgely")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/UI/redraws"]
visible = false
layout_mode = 0
offset_left = 44.2478
offset_top = -3.53979
offset_right = 113.248
offset_bottom = 36.4602
text = "Redraws"
scroll_active = false

[node name="Wave" type="Label" parent="CanvasLayer/UI"]
offset_left = 97.3451
offset_top = 833.628
offset_right = 131.345
offset_bottom = 856.628
text = "0"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UI/Wave"]
z_index = -1
position = Vector2(-1.76987, 12.3893)
scale = Vector2(0.343, 0.343)
texture = ExtResource("36_7y6p3")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/UI/Wave"]
visible = false
layout_mode = 0
offset_left = 44.2478
offset_top = -3.53979
offset_right = 113.248
offset_bottom = 36.4602
text = "Wave"
scroll_active = false

[node name="Hpbar" type="TextureProgressBar" parent="CanvasLayer/UI"]
offset_left = -5.30973
offset_top = 31.8584
offset_right = 253.69
offset_bottom = 223.858
scale = Vector2(1.175, 1.175)
value = 100.0
texture_under = ExtResource("37_hp0un")
texture_progress = ExtResource("38_72lji")

[node name="maxhp" type="Label" parent="CanvasLayer/UI/Hpbar"]
z_index = 2
layout_mode = 0
offset_left = 60.0
offset_top = 24.0
offset_right = 236.0
offset_bottom = 47.0
text = "100"
horizontal_alignment = 2

[node name="EXPbar" type="TextureProgressBar" parent="CanvasLayer/UI"]
offset_left = 3.53982
offset_top = 95.5752
offset_right = 366.54
offset_bottom = 287.575
texture_under = ExtResource("39_dfgb8")
texture_progress = ExtResource("40_82klk")

[node name="xpval" type="Label" parent="CanvasLayer/UI/EXPbar"]
layout_mode = 0
offset_left = 71.0
offset_top = 25.0
offset_right = 239.0
offset_bottom = 48.0
text = "0"
horizontal_alignment = 2

[node name="CatBar" type="TextureProgressBar" parent="CanvasLayer/UI"]
offset_left = 14.1593
offset_top = 596.46
offset_right = 376.159
offset_bottom = 960.46
scale = Vector2(0.5, 0.5)
max_value = 5.0
fill_mode = 4
texture_under = ExtResource("41_rcs85")
texture_progress = ExtResource("42_v3gxg")

[node name="Label" type="Label" parent="CanvasLayer/UI/CatBar"]
visible = false
layout_mode = 0
offset_left = 116.814
offset_top = 35.3982
offset_right = 239.814
offset_bottom = 58.3982
text = "next Catastropy"

[node name="DamageDealt" type="Label" parent="CanvasLayer/UI"]
offset_left = 243.658
offset_top = 1066.67
offset_right = 283.658
offset_bottom = 1089.67

[node name="UnlockSpot" type="Node2D" parent="CanvasLayer/UI"]
z_index = 20
position = Vector2(800, 545.133)
scale = Vector2(1.5, 1.5)

[node name="TutorialSpot" type="Node2D" parent="CanvasLayer/UI"]
position = Vector2(923.894, 557.522)

[node name="saving" type="Label" parent="CanvasLayer/UI"]
offset_left = 40.708
offset_top = 17.6991
offset_right = 167.708
offset_bottom = 40.6991
text = "Saving the game
"

[node name="ExpTarget" type="Node2D" parent="CanvasLayer/UI"]
position = Vector2(243.363, 116.814)

[node name="BuildPhase" type="Sprite2D" parent="CanvasLayer/UI"]
clip_children = 2
position = Vector2(1042.48, -42.4558)
texture = ExtResource("16_up1d7")

[node name="Label" type="Label" parent="CanvasLayer/UI/BuildPhase"]
offset_left = -120.354
offset_top = -28.3186
offset_right = 356.646
offset_bottom = 41.6814
text = "Build Phase started"
label_settings = SubResource("LabelSettings_hp71f")
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/UI/BuildPhase"]
position = Vector2(1.76785, -19.4911)
scale = Vector2(0.229266, 0.229266)
sprite_frames = SubResource("SpriteFrames_iq0j2")
autoplay = "default"
frame_progress = 0.851657

[node name="Battlephase" type="Sprite2D" parent="CanvasLayer/UI"]
clip_children = 2
position = Vector2(1041.53, -42.4336)
texture = ExtResource("16_up1d7")

[node name="Label" type="Label" parent="CanvasLayer/UI/Battlephase"]
offset_left = -120.354
offset_top = -28.3186
offset_right = 356.646
offset_bottom = 41.6814
text = "Battle Phase started"
label_settings = SubResource("LabelSettings_hp71f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/UI/Battlephase"]
position = Vector2(10.6195, -26.5487)
scale = Vector2(0.23, 0.23)
sprite_frames = SubResource("SpriteFrames_83itf")
frame_progress = 0.24972

[node name="Menu Button" type="TextureButton" parent="CanvasLayer/UI"]
offset_left = 1842.48
offset_right = 2037.48
offset_bottom = 66.0
texture_normal = ExtResource("47_ll7at")

[node name="Cat" type="Sprite2D" parent="CanvasLayer/UI"]
clip_children = 2
position = Vector2(1042.48, -42.4558)
texture = ExtResource("16_up1d7")

[node name="catlabel" type="Label" parent="CanvasLayer/UI/Cat"]
offset_left = -224.781
offset_top = -33.6504
offset_right = 252.219
offset_bottom = 36.3496
text = "Build Phase started"
label_settings = SubResource("LabelSettings_hp71f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/UI/Cat"]
position = Vector2(1.76785, -19.4911)
scale = Vector2(0.229266, 0.229266)
sprite_frames = SubResource("SpriteFrames_iq0j2")
autoplay = "default"
frame_progress = 0.851657

[node name="PlayerName" type="Label" parent="CanvasLayer"]
offset_left = 61.9469
offset_top = -109.735
offset_right = 359.947
offset_bottom = -19.7345
text = "no account selected"
label_settings = SubResource("LabelSettings_tx5p1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_iyocb")
}

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/AnimationPlayer"]
modulate = Color(1, 1, 1, 0)
z_index = 4096
position = Vector2(1104.42, 568.142)
scale = Vector2(2.30182, 1.13103)
texture = ExtResource("15_eunkj")

[connection signal="statePropagation" from="." to="CanvasLayer" method="_on_menu_state_propagation"]
[connection signal="statePropagation" from="." to="CanvasLayer/UI/Hand" method="_on_menu_state_propagation"]
[connection signal="visibility_changed" from="CanvasLayer/MainMenu" to="CanvasLayer" method="_on_main_menu_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/SpeedButton" to="." method="_on_speed_button_pressed" binds= [1]]
[connection signal="pressed" from="CanvasLayer/UI/SpeedButton2" to="." method="_on_speed_button_pressed" binds= [-1]]
[connection signal="pressed" from="CanvasLayer/UI/StartBattlePhase" to="." method="_on_start_battle_phase_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Menu Button" to="." method="_on_menu_button_pressed"]
